# dature

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: done.md  new-source.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: changelog.yml  ci.yml  labeler.yml  publish.yml  release.yml  scorecard.yml
changes/: +codecov.misc  +coverage.misc  +remove-source-mutations.refactor  84.bugfix  84.feature
docs/: api-reference.md  changelog.md  generate_changelog.py  generate_versions.py  index.md  introduction.md  supported_types.md  why-not-dynaconf.md  why-not-hydra.md  why-not-pydantic-settings.md
docs/advanced/: config-search.md  configure.md  custom_types.md  env-expansion.md  field-groups.md  merge-rules.md  nested-resolve.md  special-types.md
docs/comparison/: why-not-dynaconf.md  why-not-pydantic-settings.md
docs/features/: cli.md  masking.md  merging.md  naming.md  validation.md
docs/javascript/: readthedocs.js
docs/stylesheets/: extra.css
examples/: load_all_formats.py  load_from_docker_secrets.py  load_from_environ.py  load_from_ini.py  load_from_json5.py  load_from_toml.py  load_from_yaml11.py  load_from_yaml12.py
tests/: conftest.py  test_alias_provider.py  test_as_decorator.py  test_as_function.py  test_config.py  test_config_paths.py  test_custom_loader.py  test_env_expand.py  test_error_fixtures.py  test_error_formatting.py  test_examples.py  test_field_groups.py  test_field_merges.py  test_field_path.py  test_load_report.py  test_loader_resolver.py  test_loader_type.py  test_loading_context.py  test_main.py  test_merge.py  test_name_mapping.py  test_patcher.py  test_predicate.py  test_skip_invalid_fields.py  test_source_loading.py  test_type_loaders.py
(+279 files in other folders)
